themes/default/css/menu__tree.css
/*
 {$BRAND_NAME`}
 Copyright (c) ocProducts, 2004-2016
*/

.menu_type__tree ul {
	margin: 2px 0 0 0 !important;
}

.menu_type__tree ul ul {
	padding-{!en_left}: 24px;
}

.menu_type__tree li {
	padding: 3px 5px 3px 0 !important;
}

.menu_type__tree ul li a { /* ul li added to ensure precedence over ".nl li" selector, whilst not forcing us to use up our only !important */
	padding-{!en_left}: 14px;
	display: inline-block; /* This says that we want to encourage greedy space consumption rather than wrapping */
}

.menu_type__tree a {
	background-size: 6px 6px;
}

.menu_type__tree .non_current a {
	background: transparent url('{$IMG;,1x/menus/menu_bullet}') no-repeat 5px 6px;
}

.menu_type__tree .non_current a:hover {
	background: transparent url('{$IMG;,1x/menus/menu_bullet_hover}') no-repeat 5px 6px;
}

.menu_type__tree .current a {
	background: transparent url('{$IMG;,1x/menus/menu_bullet_current}') no-repeat 5px 6px;
}

.menu_type__tree .has_no_img>.drawer {
	background: url('{$IMG;,1x/menus/menu_bullet_expand}') no-repeat 0 5px !important;
}

.menu_type__tree .has_no_img>.drawer:hover {
	background: url('{$IMG;,1x/menus/menu_bullet_expand_hover}') no-repeat 0 5px !important;
}

@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
	.menu_type__tree .non_current a {
		background-image: url('{$IMG;,2x/menus/menu_bullet}');
		background-size: 5px 6px;
	}

	.menu_type__tree .non_current a:hover {
		background-image: url('{$IMG;,2x/menus/menu_bullet_hover}');
		background-size: 5px 6px;
	}

	.menu_type__tree .current a {
		background: url('{$IMG;,2x/menus/menu_bullet_current}');
		background-size: 5px 6px;
	}

	.menu_type__tree .has_no_img>.drawer {
		background-image: url('{$IMG;,2x/menus/menu_bullet_expand}');
		background-size: 5px 3px;
	}

	.menu_type__tree .has_no_img>.drawer:hover {
		background-image: url('{$IMG;,2x/menus/menu_bullet_expand_hover}');
		background-size: 5px 3px;
	}
}

.menu_type__tree img {
	width: 20px;
}

